<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    tools:context=".Activities.ResultActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/mainColor"
        tools:context=".Activities.ResultActivity">

        <ProgressBar
            android:id="@+id/fullCircularProgressBar"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/circle_shape"
            android:indeterminate="false"
            android:max="100"
            android:progress="100"
            android:progressDrawable="@drawable/circular_progress_bar"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/result_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/resultString"
            android:textColor="@color/whiteColor"
            android:textSize="32sp"
            app:layout_constraintBottom_toTopOf="@id/textViewColdPercentage"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <TextView
            android:id="@+id/textViewColdPercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ColdResultString"
            android:textColor="@color/whiteColor"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textViewColdString"
            app:layout_constraintEnd_toEndOf="@+id/textViewColdString"
            app:layout_constraintStart_toStartOf="@+id/textViewColdString"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9" />

        <TextView
            android:id="@+id/textViewColdString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ColdString"
            android:textColor="@color/whiteColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/textViewCovidString"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/textViewFluPercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/ColdResultString"
            android:textColor="@color/whiteColor"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textViewFluString"
            app:layout_constraintEnd_toEndOf="@+id/textViewFluString"
            app:layout_constraintStart_toStartOf="@+id/textViewFluString"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9" />

        <TextView
            android:id="@+id/textViewCovidString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Covid19String"
            android:textColor="@color/whiteColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textViewColdString"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/textViewColdString"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/textViewCovidPercentage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/Covid19ResultString"
            android:textColor="@color/whiteColor"
            android:textSize="25sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/textViewCovidString"
            app:layout_constraintEnd_toEndOf="@+id/textViewCovidString"
            app:layout_constraintStart_toStartOf="@+id/textViewCovidString"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.9" />

        <TextView
            android:id="@+id/textViewFluString"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="@string/FluString"
            android:textColor="@color/whiteColor"
            android:textSize="18sp"
            app:layout_constraintBottom_toBottomOf="@+id/textViewCovidString"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/textViewCovidString"
            app:layout_constraintTop_toTopOf="@+id/textViewCovidString"
            app:layout_constraintVertical_bias="0.3" />

        <TextView
            android:id="@+id/text_view_result_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="30dp"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="30dp"
            android:layout_marginRight="30dp"
            android:text="TextView"
            android:textColor="@color/whiteColor"
            android:textSize="17sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textViewCovidString"
            app:layout_constraintVertical_bias="0.26" />

        <Button
            android:id="@+id/button_share_result"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:text="Share!"
            android:background="@drawable/roundedbutton"
            android:textColor="@color/mainColor"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/text_view_result_description"
            app:layout_constraintVertical_bias="0.8"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>
</ScrollView>